--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,11 @@
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-tap-event-plugin": "^0.2.2"
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^3.0.0",
+    "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
