--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,4 +4,5 @@ django-filter==0.11.0
 django-oauth-toolkit==0.10.0
 django-extensions==1.6.1
 pytz==2015.7
-
+requests==2.10.0
+django-cors-headers==1.1.0
