--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-router": "^2.0.0",
     "react-router-redux": "^3.0.0",
     "react-tap-event-plugin": "^0.2.2",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
