client: added npm script to run dev serevr

--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,11 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --host 0.0.0.0"
   },
   "author": "",
   "license": "MIT"
