--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,10 @@
-Django==1.9
-djangorestframework==3.3.2
-django-filter==0.11.0
-django-oauth-toolkit==0.10.0
-django-extensions==1.6.1
-pytz==2015.7
-requests==2.10.0
+Django==1.10
 django-cors-headers==1.1.0
+django-extensions==1.7.1
+django-filter==0.13.0
+djangorestframework==3.4.3
+djangorestframework-jwt==1.8.0
+PyJWT==1.4.2
+pytz==2016.6.1
+requests==2.11.0
+six==1.10.0
