--- a/client-vue/package.json
+++ b/client-vue/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
-    "material-design-icons": "^2.2.3",
-    "material-design-lite": "^1.1.3",
-    "vue": "^1.0.21"
+    "bootstrap": "^3.3.7",
+    "vue": "^1.0.21",
+    "vue-strap": "^1.0.11"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
