--- a/client-vue/package.json
+++ b/client-vue/package.json
@@ -14,7 +14,9 @@
     "babel-runtime": "^6.0.0",
     "bootstrap": "^3.3.7",
     "vue": "^1.0.21",
-    "vue-strap": "^1.0.11"
+    "vue-router": "^0.7.13",
+    "vue-strap": "^1.0.11",
+    "vuex": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
