--- a/client-vue/package.json
+++ b/client-vue/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "^6.0.0",
     "bootstrap": "^3.3.7",
     "vue": "^1.0.21",
+    "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vuex": "^1.0.0-rc.2"
   },
