--- a/client-vue/package.json
+++ b/client-vue/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "bootstrap": "^3.3.7",
+    "font-awesome": "^4.6.3",
     "vue": "^1.0.21",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
