move spotify access token fetching to separate management command, fix docker build

--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,6 @@ SECRET_KEY=unsafe
 DEBUG=True
 ALLOWED_HOSTS=localhost
 SONGKICK_API_KEY=unset
+SPOTIPY_CLIENT_ID=unset
+SPOTIPY_CLIENT_SECRET=unset
+SPOTIPY_REDIRECT_URI=unset
