--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ spotipy = "*"
 djangorestframework = "*"
 djangorestframework-jwt = "*"
 firebase-admin = "*"
+graphene-django = "*"
 
 [requires]
 python_version = "3.6"
