--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-DATABASE_URL=sqlite://./database.sqlite
+DATABASE_URL=sqlite:///database.sqlite
 SECRET_KEY=unsafe
 DEBUG=True
 ALLOWED_HOSTS=localhost
