push: add test app, configure credentials with environment variables

--- a/.env.dist
+++ b/.env.dist
@@ -6,3 +6,4 @@ SONGKICK_API_KEY=unset
 SPOTIPY_CLIENT_ID=unset
 SPOTIPY_CLIENT_SECRET=unset
 SPOTIPY_REDIRECT_URI=unset
+FIREBASE_CREDENTIALS_PATH=./credentials.json
