downgrade to django2.0, django-filter<2.0 to fix django-graphene

--- a/Pipfile
+++ b/Pipfile
@@ -8,11 +8,11 @@ django-debug-toolbar = "*"
 django-extensions = "*"
 
 [packages]
-Django = "*"
+Django = "<2.1"
 "psycopg2-binary" = "*"
 django-environ = "*"
 whitenoise = "*"
-django-filter = "*"
+django-filter = "<2"
 requests = "*"
 spotipy = "*"
 firebase-admin = "*"
