add rsvp update mutation

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ requests = "*"
 spotipy = "*"
 firebase-admin = "*"
 graphene-django = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.6"
