deploy: Pin version of postgres container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
   postgres:
-    image: postgres:alpine
+    image: postgres:10-alpine
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     restart: unless-stopped
